<resources>
    <string name="app_name" translatable="false">Ledger</string>
    <string name="action_settings">Settings</string>
    <string name="balances">Balances</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="send_to">Send to</string>
    <string name="currency">Currency</string>
    <string name="pref_common_settings">Common Settings</string>
    <string name="pref_summary_currency">Default currency symbol</string>
    <string name="title_activity_settings">Settings</string>
    <string name="number_format">Number Format</string>
    <string name="pref_summary_number_format">Format for Numbers. See Java NumberFormats</string>
    <string name="date_format">Date Format</string>
    <string name="pref_summary_date_format">Format for dates</string>
    <string name="default_account1">Default Account 1</string>
    <string name="default_account2">Default Account 2</string>
    <string name="alias">Alias</string>
    <string name="account1">Account 1</string>
    <string name="account2">Account 2</string>
    <string name="templates">Templates</string>
    <string name="accounts">Accounts</string>
    <string name="dummy1">Dummy 1</string>
    <string name="dummy2">Dummy 2</string>
    <string name="openDrawer">Open</string>
    <string name="closeDrawer">Close</string>
    <string name="account_not_deleted">Could not delete accounts.</string>
    <string name="accounts_deleted">Accounts deleted.</string>
    <string name="account_not_found">Account  not found</string>
    <string name="account_constraint">Account is used in entries</string>
    <string name="item_processed">Items marked as processed.</string>
</resources>
