<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:menu="edit_menu"
    tools:context="com.mpease.ledger.EditEntryActivity">

    <TextView
        android:text="@string/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/edit_date" />

    <TextView
        android:text="@string/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edit_name" />

    <TextView
        android:text="@string/balances"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />

    <EditText
        android:text="0.00"
        android:inputType="numberDecimal|numberSigned"
        android:ems="10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_value" />
<!--
    <ListView
        android:clickable="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/edit_balances" />
-->
</LinearLayout>